--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,15 +5,14 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <a href="index.html" class="logo mr-auto" ><img src="{{site.baseurl}}assets/logo/final logo.jpeg" alt="" class="img-fluid" width="70%" style="margin-bottom: 20px;"></a>
+            <a href="index.html" class="logo mr-auto" ><img src="{{site.baseurl}}assets/logo/logo-depotax.png" alt="" class="img-fluid" width="70%" style="margin-bottom: 20px;"></a>
             <p>
               2 - Sanders Parade, <br>
               Greyhound Lane, Streatham, <br>
-              London Sw16 5NL<br>
+              London SW16 5NL<br>
               United Kingdom
               <br><br>
               <strong>Phone: </strong> <a href="tel:{{site.socials.phone}}">{{ site.socials.phone }}</a><br>
-              <strong>Mobile: </strong><a href="tel:{{site.socials.whatsapp}}">{{site.socials.whatsapp}}</a> <br>
               <strong>WhatsApp ONLY: </strong><a href="tel:{{site.socials.whatsapp2}}">{{site.socials.whatsapp2}}</a> <br>
               <strong>Email: </strong> <a href="mailto:{{site.email}}"> {{site.email}}</a> <br>
             </p>
@@ -74,9 +73,9 @@
     </div>
     <div class="footer-info2">
       <div class="social-links pt-3 social-list">
-        {% if site.socials.twitter %}<a href="https://www.twitter.com/{{ site.socials.twitter }}" class="twitter"><i class="bx bxl-twitter"></i></a>{% endif %}
-        {% if site.socials.facebook %}<a href="https://www.facebook.com/{{ site.socials.facebook }}" class="facebook"><i class="bx bxl-facebook"></i></a>{% endif %}
-        {% if site.socials.instagram %}<a href="https://www.instagram.com/{{site.socials.instagram }}" class="instagram"><i class="bx bxl-instagram"></i></a>{% endif %}
+        {% if site.socials.twitter %}<a href="https://www.twitter.com/DepoTax_UK" class="twitter"><i class="bx bxl-twitter"></i></a>{% endif %}
+        {% if site.socials.facebook %}<a href="https://www.facebook.com/DepoTaxAccountants" class="facebook"><i class="bx bxl-facebook"></i></a>{% endif %}
+        {% if site.socials.instagram %}<a href="https://www.instagram.com/depotax_uk" class="instagram"><i class="bx bxl-instagram"></i></a>{% endif %}
         {% if site.socials.gmb %}<a href="https://g.page/{{ site.socials.gmb | append: "?gm" }}" class="google-plus"><i class="bx bxl-google"></i></a>{% endif %}
         {% if site.socials.linkedin %}<a href="javascript:;" class="linkedin"><i class="bx bxl-linkedin"></i></a>{% endif %}
         {% if site.socials.trustpilot %}<a href="javascript:;" class="linkedin"><i class="icofont-star"></i></a>{% endif %}
@@ -85,7 +84,7 @@
     </div>
     <div class="container-fluid cpright">
       <div class="copyright">
-        &copy; Copyright <strong><span>AAziz & Co. Accountants and Tax Consultants</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>DepoTax. Accountants and Tax Consultants</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed by <a href="brainloggers.co.uk">Brainloggers</a>
