--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -30,7 +30,7 @@
                 <p class="animate__animated animate__fadeInUp">
                   <img src="{{site.baseurl}}assets/dev/img/testemonials/massud-akhtar.png" alt="" class="slick-member">
                 </p>
-                <p class="animate__animated animate__fadeInUp">I had the pleasure of working with Aziz & Co  with helpful and responsible team members specially Mr Ali Ahsan and Mr Osama who spent all the time i needed and answer all my questions/concerns and I am very impressed with  level of services.</p>
+                <p class="animate__animated animate__fadeInUp">I had the pleasure of working with DepoTax  with helpful and responsible team members specially Mr Ali Ahsan and Mr Osama who spent all the time i needed and answer all my questions/concerns and I am very impressed with  level of services.</p>
                 <p>- Massud Akhtar</p>
                 <a href="https://g.page/aazizandco?gm" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
               </div>
@@ -60,7 +60,7 @@
                 <p class="animate__animated animate__fadeInUp">
                   <img src="{{site.baseurl}}assets/dev/img/testemonials/sujana-karnam.png" alt="" class="slick-member">
                 </p>
-                <p class="animate__animated animate__fadeInUp">Mr Aaziz and Team very dedicated and amazing
+                <p class="animate__animated animate__fadeInUp">DepoTax Team very dedicated and amazing
                   specially thank you  Mr Ali Ahsan for being patient   Responding  all my queries regarding VAT and all other account related queries. very happy with customer service.Highly recommened !!very professional indeed..</p>
                   <p>- Sujana Karnam</p>
                 <a href="https://g.page/aazizandco?gm" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
