--- a/_includes/features.html
+++ b/_includes/features.html
@@ -38,7 +38,7 @@
         <span>04</span>
         <h4>Professional Work Ethics</h4>
         <p>
-          Aziz and Co has the ability to offer comprehensive tailor-made
+          DepoTax has the ability to offer comprehensive tailor-made
           solutions to its diversified clientele with utmost professionalism. We
           don't consider any job small and give our whole to any and every
           client.
