--- a/_includes/contact/map-london.html
+++ b/_includes/contact/map-london.html
@@ -40,6 +40,7 @@
     </div>
   </section>
   {% include contact/map-fullham.html %}
+  {% include contact/map-camden.html %}
   <section class="contact" id="contact">
     <div class="section-title">
         <h2>Hassle-free Contact Form</h2>
